# queryer

./: Cargo.toml
queryer/: Cargo.toml
queryer-fed/: README.md  package.json  tailwind.config.js
queryer-fed/src/: App.vue
queryer-fed/src-tauri/: Cargo.toml  tauri.conf.json
queryer-fed/src-tauri/src/: main.rs
queryer-node/: Cargo.toml  README.md  index.js  package-lock.json  package.json
queryer-node/src/: lib.rs
queryer-py/: .gitignore  Cargo.toml
queryer-py/src/: lib.rs
queryer/examples/: covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
