[package]
name = "queryer-fed"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "queryer-fed"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
queryer = { path = "../../queryer" }
tokio = { version = "1", features = ["full"] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
